--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>selenium-cucumber</groupId>
-	<artifactId>selenium-cucumber-java</artifactId>
-	<version>0.1.3</version>
+	<groupId>ui-rest-framework</groupId>
+	<artifactId>ui-rest</artifactId>
+	<version>1.0</version>
 	<packaging>jar</packaging>
-	<name>selenium-cucumber-java</name>
+	<name>ui-rest-selenium-cucumber-java</name>
 
 
 	<dependencies>
